# tree-sitter-llnotes

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-llnotes.pc.in
bindings/c/tree_sitter/: tree-sitter-llnotes.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_llnotes/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLlnotesTests/: TreeSitterLlnotesTests.swift
data/: regex.llnote
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
