[package]
name = "tree-sitter-llnotes"
description = "A small language for my note files."
version = "0.1.0"
authors = ["llikian"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "llnotes"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/llikian/tree-sitter-llnotes"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
